# employee-site/src/types/order.ts
@@ -1,17 +1,14 @@
-import { Product } from './product';
-
-export type OrderProduct = {
-  quantity: number;
-  product: Product;
-};
+import { Product, ProductCart } from './product';
 
 export type Order = {
   full_name: string;
   added_payment: boolean;
   reference: number;
+  scanner_image_url?: string;
   order_date_time: string;
-  products: OrderProduct[];
+  products: ProductCart[];
   phone_number: string;
+  total?: number;
   additional_phone_number: string;
   delivery_city: string;
   delivery_street: string;
